# cmpe-351-advanced-data-analytics

./: .gitignore  README.md  pyproject.toml
assignments/asgmt_2/: cmpe_351_asgmt_2.py
exercises/exer_3/: cmpe_351_exer_3.py
