[project]
dependencies = [
    "gensim==4.1.2",
    "jupyter==1.0.0",
    # Avoid compat issues w/ seaborn.
    "matplotlib>=3.5.1,<3.8.0",
    "missingno==0.5.1",
    "nltk>=3.7",
    "numpy==1.22.3",
    "openpyxl==3.0.9",
    "pandas==1.4.1",
    "pillow==9.0.1",
    "pyldavis>=3.4.0",
    # Backend for matplotlib.
    "pyqt6>=6.7.1",
    "scikit-learn==1.0.2",
    "scipy==1.8.0",
    "seaborn>=0.11.2",
    "spacy==3.2.4",
    "statsmodels==0.13.2",
    "torch==1.11.0",
    "torchinfo==1.6.5",
    "torchvision==0.12.0",
    # https://github.com/explosion/spaCy/issues/12659#issuecomment-1558990134
    "typing-extensions<4.6.0",
]
name = "cmpe-351-advanced-data-analytics"
readme = "README.md"
requires-python = ">=3.9"
version = "0.1.0"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupytext>=1.16.4",
    "ruff>=0.8.2",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "platform_system != 'Darwin'"},
]
torchvision = [
  { index = "pytorch-cpu", marker = "platform_system != 'Darwin'"},
]

[[tool.uv.index]]
explicit = true
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
